examples/private-routable-subnets/theory.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theory 
spec:
  replicas: 5 
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      tier: theory 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        tier: theory 
    spec:
      containers:
      - name: main
        image: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        lifecycle:
          postStart:
            exec:
              command:
              - sh
              - -cx
              - |
                echo "{\"host\":\"$HOSTNAME\", \"ver\":\"$APP_VER\"}" > /usr/share/nginx/html/index.html
