examples/private-routable-subnets/svc-theory.yml
apiVersion: v1
kind: Service
metadata:
  name: theory
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    tier: theory
