examples/private-routable-subnets/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: another 
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    tier: another
